force-app/main/default/objects/Retailer__c/Retailer__c.object-meta.xml
<CustomObject>
    <description>Retailer stores the retailers for the system. Retailer is related to Location, Retailer Service, Retailer Service Certification, and Retailer Service Equipment.</description>
    <label>Retailer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retailers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>