force-app/main/default/objects/Retailer__c/fields/FulfillmentLeadTime__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentLeadTime__c</fullName>
    <label>Fulfillment Lead Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>