force-app/main/default/objects/Retailer__c/fields/isMaterialReqd__c.field-meta.xml
<CustomField>
    <fullName>isMaterialReqd__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To determine if materials are needed for this retailer.</description>
    <label>Is Material Reqd</label>
    <type>Checkbox</type>
</CustomField>