force-app/main/default/objects/Retailer__c/fields/JobCancelLeadTime__c.field-meta.xml
<CustomField>
    <fullName>JobCancelLeadTime__c</fullName>
    <label>Job Cancel Lead Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>