force-app/main/default/objects/Retailer__c/fields/LogoHeight__c.field-meta.xml
<CustomField>
    <fullName>LogoHeight__c</fullName>
    <label>Logo Height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>