force-app/main/default/objects/Retailer__c/fields/LogoURL__c.field-meta.xml
<CustomField>
    <fullName>LogoURL__c</fullName>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>