force-app/main/default/objects/Retailer__c/fields/OneHubRetailerId__c.field-meta.xml
<CustomField>
    <fullName>OneHubRetailerId__c</fullName>
    <label>One Hub Retailer ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>