force-app/main/default/objects/Retailer__c/fields/ProjectCancelLeadTime__c.field-meta.xml
<CustomField>
    <fullName>ProjectCancelLeadTime__c</fullName>
    <label>Project Cancel Lead Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>