force-app/main/default/objects/Retailer__c/fields/TargetAcquiredDefault__c.field-meta.xml
<CustomField>
    <fullName>TargetAcquiredDefault__c</fullName>
    <label>Target Acquired Default</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Donated</fullName>
            </value>
            <value>
                <fullName>Kitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>